# PGL

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.c
src/camera/: CMakeLists.txt  camera.c  camera.h
src/color/: CMakeLists.txt  color.h
src/config/: CMakeLists.txt  config.c  config.h
src/device/: CMakeLists.txt  device.c  device.h
src/lcd/: CMakeLists.txt  lcd.c  lcd.h
src/light/: CMakeLists.txt  light.c  light.h
src/light_source/: CMakeLists.txt  light_source.h
src/mesh/: CMakeLists.txt  mesh.c  mesh.h
src/pgl/: CMakeLists.txt  mesh.c  mesh.h  pgl.c  pgl.h  pgl_queue.h  shapes.c  shapes.h  triangle_queue.h  vertex.h
src/pglm/: CMakeLists.txt  pglm.c  pglm.h
src/pglm/cast/: cast.h
src/pglm/color/: rgb565.h
src/pglm/core/: core.h  defines.h  epsilon.h  fast.h  pglmdef.h
src/pglm/geometry/: plane.h  ray.h  sphere.h  triangle.h
src/pglm/light/: light.c  light.h
src/pglm/light_source/: light_source.h
src/pglm/matrix/: cast_matrix.h  mat2f.h  mat3f.h  mat4f.h
src/pglm/matrix/mat2/: mat2f.h
src/pglm/matrix/mat3/: mat3f.h
src/pglm/quat/: quat.h
src/pglm/ray_intersect/: intersect.h  primitive.h  ray.h
src/pglm/transformation/: homogeneous.h  projection.h  transform2d.h  transform3d.h  view.h  viewport.h
src/pglm/vector/: vec2f.h  vec2i.h  vec3f.h  vec3i.h  vec4f.h  vec4i.h
src/pglm/vector/vec2/: vec2f.h  vec2i.h  vec2u.h
src/pglm/vector/vec3/: vec3f.h
src/rasterizer/: CMakeLists.txt  rasterizer.c  rasterizer.h
src/texture/: CMakeLists.txt  texture.c  texture.h
src/transform/: CMakeLists.txt  transform.c  transform.h
src/triangle/: CMakeLists.txt  triangle.h
src/vertex/: CMakeLists.txt
